src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> level
Rule 2     level -> maze entry exit rooms paths obstacles
Rule 3     maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA
Rule 4     dimensions -> DIMENSIONS NUMBER X NUMBER
Rule 5     entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 6     exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 7     rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER
Rule 8     roomList -> room roomList
Rule 9     roomList -> <empty>
Rule 10    room -> ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER
Rule 11    obstacleList -> obstacle obstacleList
Rule 12    obstacleList -> <empty>
Rule 13    obstacle -> bomb
Rule 14    obstacle -> enemy
Rule 15    obstacle -> door
Rule 16    obstacle -> key
Rule 17    obstacle -> coin
Rule 18    obstacle -> trap
Rule 19    bomb -> BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 20    enemy -> ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
Rule 21    enemy_type -> ARCHER
Rule 22    enemy_type -> WARRIOR
Rule 23    enemy_type -> MAGE
Rule 24    door -> DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 25    key -> KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 26    coin -> COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 27    trap -> TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 28    paths -> PATHS LLAVE_IZQ pathList LLAVE_DER
Rule 29    pathList -> path pathList
Rule 30    pathList -> <empty>
Rule 31    path -> PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 32    path -> PATH LLAVE_IZQ pointList LLAVE_DER
Rule 33    pointList -> point pointList
Rule 34    pointList -> <empty>
Rule 35    point -> POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
Rule 36    obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER

Terminals, with rules where they appear

ARCHER               : 21
BOMB                 : 19
COIN                 : 26
COMA                 : 5 6 10 19 20 24 25 26 27 27 31 31 35
DIMENSIONS           : 4
DOOR                 : 24
ENEMY                : 20
ENTRY                : 5
EXIT                 : 6
FROM                 : 10 31
KEY                  : 25
LLAVE_DER            : 3 7 10 28 32 36
LLAVE_IZQ            : 3 7 10 28 32 36
MAGE                 : 23
MAZE                 : 3
NUMBER               : 4 4 5 5 6 6 10 10 19 19 20 20 24 24 25 25 26 26 27 27 27 27 31 31 31 31 35 35
OBSTACLES            : 36
PAREN_DER            : 5 6 10 19 20 24 25 26 27 27 31 31 35
PAREN_IZQ            : 5 6 10 19 20 24 25 26 27 27 31 31 35
PATH                 : 31 32
PATHS                : 28
POINT                : 35
PUNTO_COMA           : 3 5 6 19 20 24 25 26 27 31 35
ROOM                 : 10
ROOMS                : 7
TO                   : 27 31
TRAP                 : 27
TYPE                 : 20
WARRIOR              : 22
X                    : 4
error                : 

Nonterminals, with rules where they appear

bomb                 : 13
coin                 : 17
dimensions           : 3 10
door                 : 15
enemy                : 14
enemy_type           : 20
entry                : 2
exit                 : 2
key                  : 16
level                : 1
maze                 : 2
obstacle             : 11
obstacleList         : 10 11 36
obstacles            : 2
path                 : 29
pathList             : 28 29
paths                : 2
point                : 33
pointList            : 32 33
program              : 0
room                 : 8
roomList             : 7 8
rooms                : 2
trap                 : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . level
    (2) level -> . maze entry exit rooms paths obstacles
    (3) maze -> . MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA

    MAZE            shift and go to state 4

    program                        shift and go to state 1
    level                          shift and go to state 2
    maze                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> level .

    $end            reduce using rule 1 (program -> level .)


state 3

    (2) level -> maze . entry exit rooms paths obstacles
    (5) entry -> . ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    ENTRY           shift and go to state 6

    entry                          shift and go to state 5

state 4

    (3) maze -> MAZE . LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA

    LLAVE_IZQ       shift and go to state 7


state 5

    (2) level -> maze entry . exit rooms paths obstacles
    (6) exit -> . EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    EXIT            shift and go to state 9

    exit                           shift and go to state 8

state 6

    (5) entry -> ENTRY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 10


state 7

    (3) maze -> MAZE LLAVE_IZQ . dimensions LLAVE_DER PUNTO_COMA
    (4) dimensions -> . DIMENSIONS NUMBER X NUMBER

    DIMENSIONS      shift and go to state 12

    dimensions                     shift and go to state 11

state 8

    (2) level -> maze entry exit . rooms paths obstacles
    (7) rooms -> . ROOMS LLAVE_IZQ roomList LLAVE_DER

    ROOMS           shift and go to state 14

    rooms                          shift and go to state 13

state 9

    (6) exit -> EXIT . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 15


state 10

    (5) entry -> ENTRY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 16


state 11

    (3) maze -> MAZE LLAVE_IZQ dimensions . LLAVE_DER PUNTO_COMA

    LLAVE_DER       shift and go to state 17


state 12

    (4) dimensions -> DIMENSIONS . NUMBER X NUMBER

    NUMBER          shift and go to state 18


state 13

    (2) level -> maze entry exit rooms . paths obstacles
    (28) paths -> . PATHS LLAVE_IZQ pathList LLAVE_DER

    PATHS           shift and go to state 20

    paths                          shift and go to state 19

state 14

    (7) rooms -> ROOMS . LLAVE_IZQ roomList LLAVE_DER

    LLAVE_IZQ       shift and go to state 21


state 15

    (6) exit -> EXIT PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 22


state 16

    (5) entry -> ENTRY PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 23


state 17

    (3) maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 24


state 18

    (4) dimensions -> DIMENSIONS NUMBER . X NUMBER

    X               shift and go to state 25


state 19

    (2) level -> maze entry exit rooms paths . obstacles
    (36) obstacles -> . OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER

    OBSTACLES       shift and go to state 27

    obstacles                      shift and go to state 26

state 20

    (28) paths -> PATHS . LLAVE_IZQ pathList LLAVE_DER

    LLAVE_IZQ       shift and go to state 28


state 21

    (7) rooms -> ROOMS LLAVE_IZQ . roomList LLAVE_DER
    (8) roomList -> . room roomList
    (9) roomList -> .
    (10) room -> . ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    LLAVE_DER       reduce using rule 9 (roomList -> .)
    ROOM            shift and go to state 31

    roomList                       shift and go to state 29
    room                           shift and go to state 30

state 22

    (6) exit -> EXIT PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 32


state 23

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 33


state 24

    (3) maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA .

    ENTRY           reduce using rule 3 (maze -> MAZE LLAVE_IZQ dimensions LLAVE_DER PUNTO_COMA .)


state 25

    (4) dimensions -> DIMENSIONS NUMBER X . NUMBER

    NUMBER          shift and go to state 34


state 26

    (2) level -> maze entry exit rooms paths obstacles .

    $end            reduce using rule 2 (level -> maze entry exit rooms paths obstacles .)


state 27

    (36) obstacles -> OBSTACLES . LLAVE_IZQ obstacleList LLAVE_DER

    LLAVE_IZQ       shift and go to state 35


state 28

    (28) paths -> PATHS LLAVE_IZQ . pathList LLAVE_DER
    (29) pathList -> . path pathList
    (30) pathList -> .
    (31) path -> . PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (32) path -> . PATH LLAVE_IZQ pointList LLAVE_DER

    LLAVE_DER       reduce using rule 30 (pathList -> .)
    PATH            shift and go to state 38

    pathList                       shift and go to state 36
    path                           shift and go to state 37

state 29

    (7) rooms -> ROOMS LLAVE_IZQ roomList . LLAVE_DER

    LLAVE_DER       shift and go to state 39


state 30

    (8) roomList -> room . roomList
    (8) roomList -> . room roomList
    (9) roomList -> .
    (10) room -> . ROOM FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    LLAVE_DER       reduce using rule 9 (roomList -> .)
    ROOM            shift and go to state 31

    room                           shift and go to state 30
    roomList                       shift and go to state 40

state 31

    (10) room -> ROOM . FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    FROM            shift and go to state 41


state 32

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 42


state 33

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER . PAREN_DER PUNTO_COMA

    PAREN_DER       shift and go to state 43


state 34

    (4) dimensions -> DIMENSIONS NUMBER X NUMBER .

    LLAVE_DER       reduce using rule 4 (dimensions -> DIMENSIONS NUMBER X NUMBER .)
    LLAVE_IZQ       reduce using rule 4 (dimensions -> DIMENSIONS NUMBER X NUMBER .)


state 35

    (36) obstacles -> OBSTACLES LLAVE_IZQ . obstacleList LLAVE_DER
    (11) obstacleList -> . obstacle obstacleList
    (12) obstacleList -> .
    (13) obstacle -> . bomb
    (14) obstacle -> . enemy
    (15) obstacle -> . door
    (16) obstacle -> . key
    (17) obstacle -> . coin
    (18) obstacle -> . trap
    (19) bomb -> . BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (20) enemy -> . ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
    (24) door -> . DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (25) key -> . KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (26) coin -> . COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (27) trap -> . TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 12 (obstacleList -> .)
    BOMB            shift and go to state 52
    ENEMY           shift and go to state 53
    DOOR            shift and go to state 54
    KEY             shift and go to state 55
    COIN            shift and go to state 56
    TRAP            shift and go to state 57

    obstacleList                   shift and go to state 44
    obstacle                       shift and go to state 45
    bomb                           shift and go to state 46
    enemy                          shift and go to state 47
    door                           shift and go to state 48
    key                            shift and go to state 49
    coin                           shift and go to state 50
    trap                           shift and go to state 51

state 36

    (28) paths -> PATHS LLAVE_IZQ pathList . LLAVE_DER

    LLAVE_DER       shift and go to state 58


state 37

    (29) pathList -> path . pathList
    (29) pathList -> . path pathList
    (30) pathList -> .
    (31) path -> . PATH FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (32) path -> . PATH LLAVE_IZQ pointList LLAVE_DER

    LLAVE_DER       reduce using rule 30 (pathList -> .)
    PATH            shift and go to state 38

    path                           shift and go to state 37
    pathList                       shift and go to state 59

state 38

    (31) path -> PATH . FROM PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (32) path -> PATH . LLAVE_IZQ pointList LLAVE_DER

    FROM            shift and go to state 60
    LLAVE_IZQ       shift and go to state 61


state 39

    (7) rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER .

    PATHS           reduce using rule 7 (rooms -> ROOMS LLAVE_IZQ roomList LLAVE_DER .)


state 40

    (8) roomList -> room roomList .

    LLAVE_DER       reduce using rule 8 (roomList -> room roomList .)


state 41

    (10) room -> ROOM FROM . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    PAREN_IZQ       shift and go to state 62


state 42

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER . PAREN_DER PUNTO_COMA

    PAREN_DER       shift and go to state 63


state 43

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 64


state 44

    (36) obstacles -> OBSTACLES LLAVE_IZQ obstacleList . LLAVE_DER

    LLAVE_DER       shift and go to state 65


state 45

    (11) obstacleList -> obstacle . obstacleList
    (11) obstacleList -> . obstacle obstacleList
    (12) obstacleList -> .
    (13) obstacle -> . bomb
    (14) obstacle -> . enemy
    (15) obstacle -> . door
    (16) obstacle -> . key
    (17) obstacle -> . coin
    (18) obstacle -> . trap
    (19) bomb -> . BOMB PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (20) enemy -> . ENEMY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA
    (24) door -> . DOOR PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (25) key -> . KEY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (26) coin -> . COIN PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA
    (27) trap -> . TRAP PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 12 (obstacleList -> .)
    BOMB            shift and go to state 52
    ENEMY           shift and go to state 53
    DOOR            shift and go to state 54
    KEY             shift and go to state 55
    COIN            shift and go to state 56
    TRAP            shift and go to state 57

    obstacle                       shift and go to state 45
    obstacleList                   shift and go to state 66
    bomb                           shift and go to state 46
    enemy                          shift and go to state 47
    door                           shift and go to state 48
    key                            shift and go to state 49
    coin                           shift and go to state 50
    trap                           shift and go to state 51

state 46

    (13) obstacle -> bomb .

    BOMB            reduce using rule 13 (obstacle -> bomb .)
    ENEMY           reduce using rule 13 (obstacle -> bomb .)
    DOOR            reduce using rule 13 (obstacle -> bomb .)
    KEY             reduce using rule 13 (obstacle -> bomb .)
    COIN            reduce using rule 13 (obstacle -> bomb .)
    TRAP            reduce using rule 13 (obstacle -> bomb .)
    LLAVE_DER       reduce using rule 13 (obstacle -> bomb .)


state 47

    (14) obstacle -> enemy .

    BOMB            reduce using rule 14 (obstacle -> enemy .)
    ENEMY           reduce using rule 14 (obstacle -> enemy .)
    DOOR            reduce using rule 14 (obstacle -> enemy .)
    KEY             reduce using rule 14 (obstacle -> enemy .)
    COIN            reduce using rule 14 (obstacle -> enemy .)
    TRAP            reduce using rule 14 (obstacle -> enemy .)
    LLAVE_DER       reduce using rule 14 (obstacle -> enemy .)


state 48

    (15) obstacle -> door .

    BOMB            reduce using rule 15 (obstacle -> door .)
    ENEMY           reduce using rule 15 (obstacle -> door .)
    DOOR            reduce using rule 15 (obstacle -> door .)
    KEY             reduce using rule 15 (obstacle -> door .)
    COIN            reduce using rule 15 (obstacle -> door .)
    TRAP            reduce using rule 15 (obstacle -> door .)
    LLAVE_DER       reduce using rule 15 (obstacle -> door .)


state 49

    (16) obstacle -> key .

    BOMB            reduce using rule 16 (obstacle -> key .)
    ENEMY           reduce using rule 16 (obstacle -> key .)
    DOOR            reduce using rule 16 (obstacle -> key .)
    KEY             reduce using rule 16 (obstacle -> key .)
    COIN            reduce using rule 16 (obstacle -> key .)
    TRAP            reduce using rule 16 (obstacle -> key .)
    LLAVE_DER       reduce using rule 16 (obstacle -> key .)


state 50

    (17) obstacle -> coin .

    BOMB            reduce using rule 17 (obstacle -> coin .)
    ENEMY           reduce using rule 17 (obstacle -> coin .)
    DOOR            reduce using rule 17 (obstacle -> coin .)
    KEY             reduce using rule 17 (obstacle -> coin .)
    COIN            reduce using rule 17 (obstacle -> coin .)
    TRAP            reduce using rule 17 (obstacle -> coin .)
    LLAVE_DER       reduce using rule 17 (obstacle -> coin .)


state 51

    (18) obstacle -> trap .

    BOMB            reduce using rule 18 (obstacle -> trap .)
    ENEMY           reduce using rule 18 (obstacle -> trap .)
    DOOR            reduce using rule 18 (obstacle -> trap .)
    KEY             reduce using rule 18 (obstacle -> trap .)
    COIN            reduce using rule 18 (obstacle -> trap .)
    TRAP            reduce using rule 18 (obstacle -> trap .)
    LLAVE_DER       reduce using rule 18 (obstacle -> trap .)


state 52

    (19) bomb -> BOMB . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 67


state 53

    (20) enemy -> ENEMY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    PAREN_IZQ       shift and go to state 68


state 54

    (24) door -> DOOR . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 69


state 55

    (25) key -> KEY . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 70


state 56

    (26) coin -> COIN . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 71


state 57

    (27) trap -> TRAP . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 72


state 58

    (28) paths -> PATHS LLAVE_IZQ pathList LLAVE_DER .

    OBSTACLES       reduce using rule 28 (paths -> PATHS LLAVE_IZQ pathList LLAVE_DER .)


state 59

    (29) pathList -> path pathList .

    LLAVE_DER       reduce using rule 29 (pathList -> path pathList .)


state 60

    (31) path -> PATH FROM . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 73


state 61

    (32) path -> PATH LLAVE_IZQ . pointList LLAVE_DER
    (33) pointList -> . point pointList
    (34) pointList -> .
    (35) point -> . POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 34 (pointList -> .)
    POINT           shift and go to state 76

    pointList                      shift and go to state 74
    point                          shift and go to state 75

state 62

    (10) room -> ROOM FROM PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    NUMBER          shift and go to state 77


state 63

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER . PUNTO_COMA

    PUNTO_COMA      shift and go to state 78


state 64

    (5) entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .

    EXIT            reduce using rule 5 (entry -> ENTRY PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .)


state 65

    (36) obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER .

    $end            reduce using rule 36 (obstacles -> OBSTACLES LLAVE_IZQ obstacleList LLAVE_DER .)


state 66

    (11) obstacleList -> obstacle obstacleList .

    LLAVE_DER       reduce using rule 11 (obstacleList -> obstacle obstacleList .)


state 67

    (19) bomb -> BOMB PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 79


state 68

    (20) enemy -> ENEMY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    NUMBER          shift and go to state 80


state 69

    (24) door -> DOOR PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 81


state 70

    (25) key -> KEY PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 82


state 71

    (26) coin -> COIN PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 83


state 72

    (27) trap -> TRAP PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 84


state 73

    (31) path -> PATH FROM PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 85


state 74

    (32) path -> PATH LLAVE_IZQ pointList . LLAVE_DER

    LLAVE_DER       shift and go to state 86


state 75

    (33) pointList -> point . pointList
    (33) pointList -> . point pointList
    (34) pointList -> .
    (35) point -> . POINT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    LLAVE_DER       reduce using rule 34 (pointList -> .)
    POINT           shift and go to state 76

    point                          shift and go to state 75
    pointList                      shift and go to state 87

state 76

    (35) point -> POINT . PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    PAREN_IZQ       shift and go to state 88


state 77

    (10) room -> ROOM FROM PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    COMA            shift and go to state 89


state 78

    (6) exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .

    ROOMS           reduce using rule 6 (exit -> EXIT PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA .)


state 79

    (19) bomb -> BOMB PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 90


state 80

    (20) enemy -> ENEMY PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    COMA            shift and go to state 91


state 81

    (24) door -> DOOR PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 92


state 82

    (25) key -> KEY PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 93


state 83

    (26) coin -> COIN PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 94


state 84

    (27) trap -> TRAP PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 95


state 85

    (31) path -> PATH FROM PAREN_IZQ NUMBER . COMA NUMBER PAREN_DER TO PAREN_IZQ NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    COMA            shift and go to state 96


state 86

    (32) path -> PATH LLAVE_IZQ pointList LLAVE_DER .

    PATH            reduce using rule 32 (path -> PATH LLAVE_IZQ pointList LLAVE_DER .)
    LLAVE_DER       reduce using rule 32 (path -> PATH LLAVE_IZQ pointList LLAVE_DER .)


state 87

    (33) pointList -> point pointList .

    LLAVE_DER       reduce using rule 33 (pointList -> point pointList .)


state 88

    (35) point -> POINT PAREN_IZQ . NUMBER COMA NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 97


state 89

    (10) room -> ROOM FROM PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER dimensions LLAVE_IZQ obstacleList LLAVE_DER

    NUMBER          shift and go to state 98


state 90

    (19) bomb -> BOMB PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 99


state 91

    (20) enemy -> ENEMY PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER TYPE enemy_type PUNTO_COMA

    NUMBER          shift and go to state 100


state 92

    (24) door -> DOOR PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 101


state 93

    (25) key -> KEY PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA

    NUMBER          shift and go to state 102


state 94

    (26) coin -> COIN PAREN_IZQ NUMBER COMA . NUMBER PAREN_DER PUNTO_COMA
